solved most findbugs issues